dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__frame_dispatch__single_frame_arrives_at_worker.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.priority_router.time op="timer.start_at"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.priority_router.drained value=0 op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.priority_router.time op="timer_guard.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.frame_dispatch.time op="timer.start_at"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.frame_dispatch.drained value=0 op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.frame_dispatch.time op="timer_guard.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.priority_router.next_poll_latency op="timer.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.priority_router.time op="timer.start_at"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=q.router_to_batcher.enq variant=p2 value=1 op="queue.enqueue" op="counter.add"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.add label=q.router_to_batcher.depth variant=p2 delta=1 value=1 op="queue.enqueue" op="gauge.add"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.enqueue count=1 depth=1 op="queue.enqueue"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: summary.record_value label=q.router_to_batcher.depth_dist variant=p2 value=1 op="queue.enqueue" op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.priority_router.drained value=1 op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.priority_router.time op="timer_guard.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.record label=task.frame_dispatch.next_poll_latency op="timer.record"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer.start_at label=task.frame_dispatch.time op="timer.start_at"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=q.router_to_batcher.receiver variant=p2.task.frame_dispatch value=1 op="counter.add"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=q.router_to_batcher.drain variant=p2 value=1 op="queue.dequeue_n" op="counter.add"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.sub label=q.router_to_batcher.depth variant=p2 delta=1 value=0 op="queue.dequeue_n" op="gauge.sub"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.dequeue_n count=1 depth=0 op="queue.dequeue_n"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: counter.add label=pick_two.chosen variant=send.0 value=1 op="counter.add"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: summary.record_value label=task.frame_dispatch.drained value=2 op="summary.record_value"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: timer_guard.record label=task.frame_dispatch.time op="timer_guard.record"
